Update Theme Settings “theme”

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -42,5 +42,5 @@ contact_info:
   phone_link: tel:0402263190
   email_link: mailto:info@epiclandscapedesigns.com.au
   facebook_link: https://www.facebook.com/profile.php?id=61577839104629
-  footer_copyright: © 2025 Epic Landscape Designs. All rights reserved
+  footer_copyright: © 2025 Epic Landscape Designs | Sydney | Newcastle
 preview: Theme settings updated
