--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,8 +1,8 @@
 navigation:
-  nav_bg: "#545454"
+  nav_bg: "#111"
   nav_text_color: "#f1f1f2"
   hamburger_icon_color: "#111"
-  close_icon_color: "#545454"
+  close_icon_color: "#f1f1f2"
 body:
   body_bg: "#f1f1f2"
 home:
