--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -2,7 +2,7 @@ navigation:
   nav_bg: "#f1f1f2"
   nav_text_color: "#545454"
   hamburger_icon_color: "#111"
-  close_icon_color: "#f1f1f2"
+  close_icon_color: "#111"
 body:
   body_bg: "#f1f1f2"
 home:
