--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,6 +1,6 @@
 navigation:
-  nav_bg: "#111"
-  nav_text_color: "#f1f1f3"
+  nav_bg: "#f1f1f3"
+  nav_text_color: "#111"
   hamburger_icon_color: "#111"
   close_icon_color: "#f1f1f3"
 body:
